# STS2MCP

./: .gitignore  McpMod.PetBridge.cs  McpMod.PetOverlay.cs  McpMod.PetState.cs  McpMod.StateBuilder.cs  McpMod.cs  README.md  README.zh-CN.md  STS2_MCP.csproj  STS2_MCP.sln  build.ps1  install.cmd
assets/pet/owl/: README.md
docs/: raw-full.md  raw-simplified.md
docs/superpowers/plans/: 2026-04-04-pet-owl-overlay.md
orchestrator/: pyproject.toml  start-pet-advise.cmd  start-pet-auto.cmd  start-pet.ps1  sts2_pet.toml.example
orchestrator/src/sts2_pet/: __init__.py  cli.py  config.py  game_client.py  models.py  pet_client.py  policy.py  provider.py  runner.py
orchestrator/tests/: test_clients.py  test_policy.py  test_provider_config.py  test_runner_modes.py
tests/STS2_MCP.Tests/: PetBridgeServiceTests.cs  PetOverlayViewModelTests.cs  PetStateStoreTests.cs  STS2_MCP.Tests.csproj
