[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts2-pet-orchestrator"
version = "0.1.0"
description = "Python orchestrator foundation for the STS2 pet companion system"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
